microk8s/3_Jenkins/02_persistentvolumeclaimjenkins.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
