microk8s/3_Jenkins/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/jenkins`)
    services:
    - name: jenkins
      namespace: jenkins
      port: 8080
